<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/signup_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintWidth_percent=".8"
    app:layout_constraintVertical_bias=".2"
    app:layout_constraintHorizontal_bias=".5"
    android:paddingTop="10dp"
        app:endIconMode="clear_text"
    android:paddingBottom="10dp"
        android:hint="@string/username"
        android:paddingLeft="20dp"
        android:inputType="text"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:background="@drawable/editext_bg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias=".5"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/email"
        android:maxLines="1"
        android:textSize="16sp"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"

        android:background="@drawable/editext_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_username"/>
    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias=".5"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:background="@drawable/editext_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email"/>
    <EditText
        android:id="@+id/signup_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias=".5"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/password_confirm"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:background="@drawable/editext_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_password"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".6"
        app:layout_constraintTop_toBottomOf="@id/signup_password_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/signup"
        android:textStyle="bold"
        android:background="@drawable/button_bg"

        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loginProgressLoader"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        app:lottie_speed="0.8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="@id/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />



</androidx.constraintlayout.widget.ConstraintLayout>