<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.forgotPassword.choose_forget_password_method_activity">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/back_arrow" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_method"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:textAllCaps="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_method_description"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        />

    <LinearLayout
        android:id="@+id/chooseMethodPhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/choose_method_button_background_layout"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/via_phone" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           android:orientation="vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/via_phone"
               android:textSize="20sp"
               android:layout_marginStart="10dp"
                android:textColor="@color/black"
               android:layout_marginBottom="10dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"

               />
      <!-- <TextView
           android:id="@+id/chooseMethodPhoneNoTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="+923165492388"
           android:layout_marginStart="10dp"
           android:textSize="20sp"
           android:layout_marginBottom="10dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:textColor="@color/black"
           />-->
       </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/chooseMethodEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/choose_method_button_background_layout"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/via_mail" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/via_mail"
               android:textSize="20sp"
               android:layout_marginStart="10dp"
               android:textColor="@color/black"
               android:layout_marginBottom="10dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               />
   <!--    <TextView
           android:id="@+id/chooseMethodEmailTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/email"
           android:layout_marginStart="10dp"
           android:textSize="20sp"
           android:layout_marginBottom="10dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:textColor="@color/black"
           />-->
       </LinearLayout>

    </LinearLayout>

</LinearLayout>