<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".activities.forgotPassword.forgot_password_activity">
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/back_arrow" />
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        android:src="@drawable/forgot_password_lock"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/forgot_password_description"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/phoneOptionLayout"
        android:visibility="gone"
        android:orientation="horizontal">
        <!--<androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/phoneCountrySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />-->

        <com.hbb20.CountryCodePicker
            android:id="@+id/phoneCountrySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showArrow="false"
            app:ccp_showNameCode="false"/>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainRegisterPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:id="@+id/emailOptionLayout"
        android:visibility="gone"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotPasswordEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_email_24"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgotPasswordNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:padding="10dp"/>

</LinearLayout>