<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:orientation="vertical"
android:id="@+id/newPasswordMainLayout"
    tools:context=".activities.forgotPassword.newPassword_activity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        android:src="@drawable/new_password"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_password"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/newPasswordDescription"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="New password"
            android:inputType="textPassword"
            android:autofillHints="emailAddress"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm new password"
            android:inputType="textPassword"
            android:autofillHints="emailAddress"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"/>
    </com.google.android.material.textfield.TextInputLayout>
<TextView
    android:id="@+id/errorShowTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:padding="10dp"
    android:background="@color/red"
    android:visibility="gone"
    android:textColor="@color/white"
    />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/updatePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:padding="10dp"/>

</LinearLayout>